# LSMTP

./: CITATION.cff  Cargo.toml  README.md
src/: amqp.rs  main.rs  prelude.rs  smtp_client.rs  state.rs  types.rs
src/handler/: email.rs  mod.rs  parsing.rs
src/utils/: amqp.rs  base.rs  client.rs  mod.rs
