[package]
name = "lsmtpd" # Lightweight Simple Mail Transfer Protocol Daemon (LSMTPD)
authors = ["Neko Nik <admin@nekonik.com>"]
description = "A minimalistic, lightweight SMTP server for receiving mail and forwarding to an AMQP broker."
version = "1.2.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Neko-Nik/LSMTP"
documentation = "https://lsmtp.nekonik.org"
homepage = "https://doi.org/10.31224/4377"
readme = "README.md"
keywords = ["SMTP", "mail", "RabbitMQ", "minimalistic", "server", "daemon", "AMQP", "broker", "lsmtp"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.11.8"
serde_json = "1.0"
lapin = "3.7.2"
chrono = "0.4"
log = "0.4"


[profile.release]
overflow-checks = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
lto = "fat"
